change in account controller

--- a/src/PartsUnlimitedWebsite/Views/Home/Index.cshtml
+++ b/src/PartsUnlimitedWebsite/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@
     TempData["Data"].ToString();
 }
 
-Welcome @Context.Session.GetString("useremail")
+Welcome @Context.Session.GetString("UserEmail")
 
 @section prebody {
     <div class="hero-display">
