--- a/src/PartsUnlimitedWebsite/Views/Shared/_Layout.cshtml
+++ b/src/PartsUnlimitedWebsite/Views/Shared/_Layout.cshtml
@@ -17,6 +17,11 @@
     <link href="/Content/Account.css" rel="stylesheet" type="text/css" />
     <link href="/Content/ShoppingCart.css" rel="stylesheet" type="text/css" />
     <link href="/Content/Store.css" rel="stylesheet" type="text/css" />
+    <script type="text/javascript">
+        function preventBack() { window.history.forward(); }
+        setTimeout("preventBack()", 0);
+        window.onunload = function () { null };
+    </script>
 </head>
 <body>
    
