--- a/src/PartsUnlimitedWebsite/Views/ShoppingCart/Index.cshtml
+++ b/src/PartsUnlimitedWebsite/Views/ShoppingCart/Index.cshtml
@@ -76,6 +76,7 @@
         </div>
         @if (Model.CartCount > 0)
         {
+            var total = Model.OrderCostSummary.CartTotal;
             <div id="cart-summary">
                 <div class="hidden-xs cart-summary-header">
                     <div class="row">
@@ -124,7 +125,7 @@
                 <div class="row">
                     <div class="col-xs-12 col-sm-6 col-sm-offset-6 col-md-4 col-md-offset-8">
                         <div>
-                            @Html.ActionLink("Checkout", "AddressAndPayment", "Checkout", null, new { @class = "btn pull-right checkout" })
+                            @Html.ActionLink("Checkout", "AddressAndPayment", "Checkout", new { userid = TempData["UserID"]}, new { @class = "btn pull-right checkout" })
                         </div>
                     </div>
                 </div>
