completed with mysql connection

--- a/src/PartsUnlimitedWebsite/Views/Checkout/Complete.cshtml
+++ b/src/PartsUnlimitedWebsite/Views/Checkout/Complete.cshtml
@@ -17,6 +17,7 @@
             <br />
             <p>
                 @Html.ActionLink("Keep Shopping", "Index", "Home", null, new { @class = "btn" })
+                @Html.ActionLink("Proceed for Payment", "Payment", "Checkout", null, new { @class = "btn" })
             </p>
 
         </div>
