--- a/src/PartsUnlimitedWebsite/Views/Account/Register.cshtml
+++ b/src/PartsUnlimitedWebsite/Views/Account/Register.cshtml
@@ -1,6 +1,6 @@
 ﻿@using System.Threading.Tasks
 @using PartsUnlimited
-@model PartsUnlimited.Models.Aspnetusers
+@model PartsUnlimited.Models.RegisterViewModel
 @{
     ViewBag.Title = "Register";
 }
@@ -13,45 +13,36 @@
             {
                 @Html.AntiForgeryToken()
                 <h4>Create a new account.</h4>
-                @Html.ValidationSummary("", new { @class = "text-danger" })
-                <div class="form-group">
-                    <div class="col-sm-8 col-md-10">
-                        <div class="input-group">
-                            @Html.TextBoxFor(m => m.UserName, new { @class = "form-control", placeholder = "Username" })
-                            <span class="input-group-addon"><img src="/images/login_profile_icon.png" /> </span>
-                        </div>
-
-                    </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-sm-8 col-md-10">
-                        <div class="input-group">
-                            @Html.TextBoxFor(m => m.Email, new { @class = "form-control", placeholder = "Email Address" })
-                            <span class="input-group-addon"><img src="/images/login_profile_icon.png" /> </span>
+                    @Html.ValidationSummary("", new { @class = "text-danger" })
+                    <div class="form-group">
+                        <div class="col-sm-8 col-md-10">
+                            <div class="input-group">
+                                @Html.TextBoxFor(m => m.Email, new { @class = "form-control", placeholder = "Email Address" })
+                                <span class="input-group-addon"><img src="/images/login_profile_icon.png"/> </span>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-sm-8 col-md-10">
-                        <div class="input-group">
-                            @Html.PasswordFor(m => m.Password, new { @class = "form-control", placeholder = "Password" })
-                            <span class="input-group-addon"><img src="/images/login_safe_icon.png" /></span>
+                    <div class="form-group">
+                        <div class="col-sm-8 col-md-10">
+                            <div class="input-group">
+                                @Html.PasswordFor(m => m.Password, new { @class = "form-control", placeholder = "Password" })
+                                <span class="input-group-addon"><img src="/images/login_safe_icon.png"/></span>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-sm-8 col-md-10">
-                        <div class="input-group">
-                            @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control", placeholder = "Confirm Password" })
-                            <span class="input-group-addon"><img src="/images/login_safe_icon.png" /></span>
+                    <div class="form-group">
+                        <div class="col-sm-8 col-md-10">
+                            <div class="input-group">
+                                @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control", placeholder = "Confirm Password" })
+                                <span class="input-group-addon"><img src="/images/login_safe_icon.png" /></span>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="form-group">
-                    <div class="col-sm-8 col-md-10">
-                        <input type="submit" class="btn btn-default" value="Register" />
+                    <div class="form-group">
+                        <div class="col-sm-8 col-md-10">
+                            <input type="submit" class="btn btn-default" value="Register" />
+                        </div>
                     </div>
-                </div>
             }
         </div>
         <div class="col-md-6"></div>
