--- a/src/PartsUnlimitedWebsite/Views/ShoppingCart/Index.cshtml
+++ b/src/PartsUnlimitedWebsite/Views/ShoppingCart/Index.cshtml
@@ -76,60 +76,61 @@
         </div>
         @if (Model.CartCount > 0)
         {
-            var total = Model.OrderCostSummary.CartTotal;
-            <div id="cart-summary">
-                <div class="hidden-xs cart-summary-header">
+            var FinalAmount = Model.OrderCostSummary.CartTotal;
+        <div id="cart-summary">
+            <div class="hidden-xs cart-summary-header">
+                <div class="row">
+                    <div class="col-sm-8 col-md-8 no-gutter-md-left no-gutter-sm-left">Product Description</div>
+                    <div class="col-sm-2 col-md-2 text-center">Quantity</div>
+                    <div class="col-sm-2 col-md-2 text-center">Price</div>
+                </div>
+            </div>
+            <hr>
+            @foreach (var item in Model.CartItems)
+            {
+                <div id="row-@item.CartItemId" class="cart-item">
                     <div class="row">
-                        <div class="col-sm-8 col-md-8 no-gutter-md-left no-gutter-sm-left">Product Description</div>
-                        <div class="col-sm-2 col-md-2 text-center">Quantity</div>
-                        <div class="col-sm-2 col-md-2 text-center">Price</div>
+                        <div class="col-xs-1 no-gutter-xs-right text-center-xs col-sm-2 col-sm-push-8 text-center-sm">
+                            <div class="item-label item-inventory">@item.Count</div>
+                        </div>
+                        <div class="col-xs-3 col-sm-3 col-sm-pull-2 col-md-2 cart-image"><img src="/images/@item.Product.ProductArtUrl" /></div>
+                        <div class="col-xs-6 col-sm-2 col-sm-push-5 text-center-sm col-md-push-6">
+                            <div class="visible-xs item-label">@item.Product.Title</div>
+                            <div class="item-price">@item.Product.Price.ToString("C")</div>
+                        </div>
+                        <div class="visible-xs col-xs-2 text-right no-gutter-xs-left">
+                            <a href="#" class="remove-link" data-id="@item.CartItemId"
+                               data-url='@Url.Content("~/ShoppingCart/RemoveFromCart")'>
+                                <img src="/images/remove_icon.png" />
+                            </a>
+                        </div>
+                        <div class="col-xs-12 col-sm-5 col-sm-pull-4 col-md-6 description">
+                            <div class="hidden-xs">
+                                <strong>@Html.ActionLink(item.Product.Title, "Details", "Store", new { id = item.ProductId }, null)</strong>
+                            </div>
+                            <div class="visible-xs item-label">Description</div>
+                            <p class="text-content">@item.Product.Description</p>
+                        </div>
+                        <div class="hidden-xs remove-cart-item">
+                            <a href="#" class="remove-link btn" data-id="@item.CartItemId"
+                               data-url='@Url.Content("~/ShoppingCart/RemoveFromCart")'>
+                                Remove
+                            </a>
+                        </div>
                     </div>
                 </div>
-                <hr>
-                @foreach (var item in Model.CartItems)
-                {
-                    <div id="row-@item.CartItemId" class="cart-item">
-                        <div class="row">
-                            <div class="col-xs-1 no-gutter-xs-right text-center-xs col-sm-2 col-sm-push-8 text-center-sm">
-                                <div class="item-label item-inventory">@item.Count</div>
-                            </div>
-                            <div class="col-xs-3 col-sm-3 col-sm-pull-2 col-md-2 cart-image"><img src="/images/@item.Product.ProductArtUrl" /></div>
-                            <div class="col-xs-6 col-sm-2 col-sm-push-5 text-center-sm col-md-push-6">
-                                <div class="visible-xs item-label">@item.Product.Title</div>
-                                <div class="item-price">@item.Product.Price.ToString("C")</div>
-                            </div>
-                            <div class="visible-xs col-xs-2 text-right no-gutter-xs-left">
-                                <a href="#" class="remove-link" data-id="@item.CartItemId"
-                                   data-url='@Url.Content("~/ShoppingCart/RemoveFromCart")'>
-                                    <img src="/images/remove_icon.png"/> 
-                                </a>
-                            </div>
-                            <div class="col-xs-12 col-sm-5 col-sm-pull-4 col-md-6 description">
-                                <div class="hidden-xs">
-                                    <strong>@Html.ActionLink(item.Product.Title, "Details", "Store", new { id = item.ProductId }, null)</strong>
-                                </div>
-                                <div class="visible-xs item-label">Description</div>
-                                <p class="text-content">@item.Product.Description</p>
-                            </div>
-                            <div class="hidden-xs remove-cart-item">
-                                <a href="#" class="remove-link btn" data-id="@item.CartItemId"
-                                   data-url='@Url.Content("~/ShoppingCart/RemoveFromCart")'>
-                                    Remove
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                }
-
-                @await Html.PartialAsync("_OrderCostSummary", Model.OrderCostSummary)
-                <div class="row">
-                    <div class="col-xs-12 col-sm-6 col-sm-offset-6 col-md-4 col-md-offset-8">
-                        <div>
-                            @Html.ActionLink("Checkout", "AddressAndPayment", "Checkout", new { userid = TempData["UserID"]}, new { @class = "btn pull-right checkout" })
-                        </div>
+            }
+            @await Html.PartialAsync("_OrderCostSummary", Model.OrderCostSummary)
+            
+            <div class="row">
+                <div class="col-xs-12 col-sm-6 col-sm-offset-6 col-md-4 col-md-offset-8">
+                    <div>
+                        @*@Html.ActionLink("Checkout", "AddressAndPayment", "Checkout", null, new { @class = "btn pull-right checkout" })*@
+                        @Html.ActionLink("Checkout", "AddressAndPayment", "Checkout", new {finalamount=FinalAmount}, new { @class = "btn pull-right checkout" })
                     </div>
                 </div>
             </div>
+        </div>
         }
         <h4 id="empty-cart" @if (Model.CartCount > 0) { <text> style="display: none;" </text>   }>
             Your cart is currently empty
