--- a/src/PartsUnlimitedWebsite/Views/Checkout/Charge.cshtml
+++ b/src/PartsUnlimitedWebsite/Views/Checkout/Charge.cshtml
@@ -8,6 +8,15 @@
 *@
 @{
 }
+
+<script type="text/javascript">
+    window.setTimeout(function(){
+window.location.href='/Orders/Index';
+}, 4000);
+</script>
+
+
+
 <div>
     <h3>
         Payment has been Succeeded....!
