Change slider height and added product images

--- a/src/PartsUnlimitedWebsite/Views/Home/Index.cshtml
+++ b/src/PartsUnlimitedWebsite/Views/Home/Index.cshtml
@@ -56,7 +56,7 @@
         </a>
     </div>
 </div>
-@*<div class="featured-areas">
+<div class="featured-areas">
     <div class="container">
         <section class="section-alt">
             <div class="row">
@@ -87,7 +87,7 @@
             </div>
         </section>
     </div>
-</div>*@
+</div>
     }
 
 <div id="home-page">
@@ -115,9 +115,9 @@
         <h2>Hit Track</h2>
         @await Html.PartialAsync("_ProductList", Model.HitTrack)
     </section>
-    @*<section class="section-alt">
+    <section class="section-alt">
             <h2>Community</h2>
             @await Html.PartialAsync("_CommunityList", Model.CommunityPosts)
-        </section>*@
+        </section>
 </div>
   
