--- a/src/PartsUnlimitedWebsite/Content/Home.scss
+++ b/src/PartsUnlimitedWebsite/Content/Home.scss
@@ -37,8 +37,8 @@
         .item {
             background: no-repeat right center;
             background-size: cover;
-            height: 320px;
-
+            height: 500px;
+            //height: 320px;
             @media screen and (max-width: $size-mobile-max) {
                 height: 180px;
             }
@@ -52,9 +52,11 @@
 
             p,
             li {
-                font-family: $font-primary-bold;
+                //font-family: $font-primary-bold;
+                font-family: "Segoe UI SemiBold", "Segoe UI Light", "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
                 font-style: italic;
-                font-weight: $font-primary-bold-weight;
+                font-weight: 600;
+                //font-weight: $font-primary-bold-weight;
                 text-transform: uppercase;
             }
 
@@ -163,6 +165,10 @@
                 .primary {
                     color: $color-item-primary;
                 }
+            }
+
+            .hero-display #jumbotron-carousel .item:nth-of-type(3) p{
+                text-align:center;
             }
         }
     }
